<resources>
    <string name="app_name">DADM</string>
    <string name="bar_text" translatable="false">Quotation Shake</string>
    <string name="get_quotation">Get quotation</string>
    <string name="fav_quotation">Favourite quotations</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>

    <string name="about_content">Quotation Shake by\nLuis Serrano Hernández\nluiserh1@inf.upv.es\n2020</string>

    <string name="settings_name_info">Name that identifies the user</string>
    <string name="settings_name_info_content">Insert your name</string>
    <string name="settings_language_info">Quotations will be received in the selected language</string>
    <string name="settings_request_protocol_info">Web requests will be performed using the selected HTTP method</string>
    <string name="settings_request_protocol_get" translatable="false">GET</string>
    <string name="settings_request_protocol_post" translatable="false">POST</string>

    <string name="fav_quotation_button">Author info</string>

    <string name="get_quotation_info">\"Hello %1s! Press Refresh to get a new quotation\"</string>
    <string name="get_quotation_sample_quotation">\"This is a sample quotation\"</string>
    <string name="get_quotation_author">This is a sample author</string>
    <string name="eng">English</string>
    <string name="rus">Russian</string>
    <string name="deletion_dialog_message">Are you sure you want to delete this quotation?</string>
    <string name="deletion_dialog_title">Delete Quotation</string>
    <string name="deletion_dialog_yes">The quotation has benn removed</string>
    <string name="deletion_dialog_no">The quotation will be kept</string>
    <string name="menu_quotation_add_title">Add</string>
    <string name="menu_quotation_refresh_title">Refresh</string>
    <string name="menu_favourite_delete_all">Clear All</string>
    <string name="clear_all_dialog_message">Are you sure that you want to delete ALL your favourite quotations?</string>
    <string name="clear_all_dialog_no">All quotations will be kept</string>
    <string name="clear_all_dialog_yes">All the quotations have been removed</string>
    <string name="clear_all_dialog_title">Clear All</string>
    <string name="settings_name_title">User Name</string>
    <string name="settings_request_protocol_title">HTTP request method</string>
    <string name="settings_language_title">Quotation Language</string>
    <string name="settings_database_title">Database access method</string>
    <string name="settings_database_info">Database will be accessed following the selected method</string>
    <string name="settings_category_webservice">Web Service</string>
</resources>
